refactor: enhance data encapsulation and improve error handling across services
Signed-off-by: kabi175 <kabilan.mee@gmail.com>